<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/baseline_hotel_24"
            android:title="@string/live" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/baseline_fastfood_24"
            android:title="@string/food" />
        <item
            android:id="@+id/nav_culture"
            android:icon="@drawable/baseline_local_activity_24"
            android:title="@string/culture" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/baseline_event_24"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/baseline_add_location_24"
            android:title="@string/manage_places" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_build_24"
            android:title="@string/settings" />
    </group>
</menu>