<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/list_item"
    android:layout_margin="8dp">
    <LinearLayout
        android:id="@+id/list_firstLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/place_title"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:hint="@string/title"
            android:textColorHint="@color/colorWhite"
            android:textSize="24sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPurpleMedium"
            android:padding="8dp"
            android:textAlignment="textStart"/>
        <TextView
            android:id="@+id/place_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/type"
            android:textColorHint="@color/colorWhite"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPurpleLight"
            android:textAlignment="center"
            android:padding="8dp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/place_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="8dp"
        android:src="@mipmap/ic_launcher"/>
    <LinearLayout
        android:id="@+id/place_info"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/colorPurpleLight">
        <LinearLayout
            android:id="@+id/get_direction"
            android:layout_width="0dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/info_icons"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <ImageView
                    android:id="@+id/location_icon"
                    android:clickable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_place_24"/>
                <ImageView
                    android:id="@+id/car_icon"
                    android:clickable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_navigation_24"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/location_info"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">
                <TextView
                    android:id="@+id/address_line"
                    android:clickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/full_address_line"
                    android:textColorHint="@color/colorWhite"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/distance_from_current_location"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:hint="@string/distance"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clickable="false"
                    android:layout_weight="2"
                    android:text="@string/tap_to_get_direction"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/other_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingRight="8dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:hint="@string/price"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"/>
            <LinearLayout
                android:id="@+id/rating_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/rating_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginLeft="2dp"/>
                <ImageView
                    android:id="@+id/rating_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginLeft="2dp"/>
                <ImageView
                    android:id="@+id/rating_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginLeft="2dp"/>
                <ImageView
                    android:id="@+id/rating_4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginLeft="2dp"/>
                <ImageView
                    android:id="@+id/rating_5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginLeft="2dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/rating_none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_rated"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPurpleMedium">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/websites_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/site_address"
            android:textColorHint="@color/colorWhite"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:padding="8dp"/>
    </LinearLayout>

</LinearLayout>